--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "contactmanager",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
