--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bit/ans.base-ui.input": "^0.1.2",
     "@bit/grommet.grommet.button": "^2.6.5",
     "bootstrap": "^4.3.1",
     "mdbreact": "^4.17.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-paystack": "^2.0.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
